@@ -1,5 +1,6 @@
 2012-01-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* gfeedline.py (TwitterFeedAPI): Added support for Streaming.
 	* usercolor.py: Added support for user colors.
 
 2012-01-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
